<resources>
    <string name="app_name">Agora Wawaji Server</string>
    <string name="label_settings">Settings</string>

    <string name="label_leave">Leave</string>
    <string name="main_title">Welcome to Open Live!</string>
    <string name="main_input_name">Input name of the Live (Required)</string>
    <string name="main_input_appid">Input Aogra AppId (Optional)</string>
    <string name="main_input_uid">Input uid of the Live (Optional)</string>
    <string name="main_input_url">Input CDN RTMP Url (Optional)</string>
    <string name="main_input_width">width</string>
    <string name="main_input_height">height</string>
    <string name="main_input_bitrate">bitrate</string>
    <string name="main_input_fps">fps</string>
    <string name="main_button">Join Room</string>
    <string name="main_push_flow">Open CDN RTMP streaming</string>
    <string name="main_set_nv21">Set CaptureFormat NV21</string>
    <string name="label_confirm">Confirm</string>
    <string name="no_network">No network, please check</string>

    <string-array
        name="string_array_resolutions">
        <item>640x360</item> // 360P
        <item>640x480</item> // 480P
        <item>1280x720</item> // 720P
    </string-array>

    <string-array
        name="string_array_frame_rate">
        <item>15</item> // 360P
        <item>15</item> // 480P
        <item>15</item> // 720P
    </string-array>

    <string-array
        name="string_array_bit_rate">
        <item>400</item> // 360P
        <item>500</item> // 480P
        <item>1000</item> // 720P
    </string-array>
</resources>
