<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/main_title"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="CName: "/>
            <EditText
                android:id="@+id/room_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/main_input_name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="AppId: "/>

            <EditText
                android:id="@+id/room_appid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/main_input_appid"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Uid1: "/>

            <EditText
                android:id="@+id/room_uid1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/main_input_uid"
                android:text="1"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Rtmp1: "/>

            <CheckBox
                android:id="@+id/room_push_flow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/main_push_flow" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/room_layout_rtmp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/room_url_name1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Url1: "/>

            <EditText
                android:id="@+id/room_url_edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/room_url_name1"
                android:gravity="center_vertical"
                android:text="rtmp://"
                android:inputType="text" />
            <EditText
                android:id="@+id/room_url_width1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit1"
                android:gravity="center_vertical"
                android:hint="@string/main_input_width"
                android:layout_alignLeft="@+id/room_url_edit1"
                android:inputType="number" />
            <EditText
                android:id="@+id/room_url_height1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit1"
                android:layout_toRightOf="@+id/room_url_width1"
                android:gravity="center_vertical"
                android:hint="@string/main_input_height"
                android:inputType="number" />
            <EditText
                android:id="@+id/room_url_bitrate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit1"
                android:layout_toRightOf="@+id/room_url_height1"
                android:gravity="center_vertical"
                android:hint="@string/main_input_bitrate"
                android:inputType="number" />
            <EditText
                android:id="@+id/room_url_fps1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit1"
                android:layout_toRightOf="@+id/room_url_bitrate1"
                android:gravity="center_vertical"
                android:hint="@string/main_input_fps"
                android:inputType="number" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Uid2: "/>

            <EditText
                android:id="@+id/room_uid2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/main_input_uid"
                android:text="2"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Rtmp2: "/>

            <CheckBox
                android:id="@+id/room_push_flow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/main_push_flow" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/room_layout_rtmp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/room_url_name2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Url2: "/>

            <EditText
                android:id="@+id/room_url_edit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/room_url_name2"
                android:gravity="center_vertical"
                android:text="rtmp://"
                android:inputType="text" />
            <EditText
                android:id="@+id/room_url_width2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit2"
                android:gravity="center_vertical"
                android:hint="@string/main_input_width"
                android:layout_alignLeft="@+id/room_url_edit2"
                android:inputType="number" />
            <EditText
                android:id="@+id/room_url_height2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit2"
                android:layout_toRightOf="@+id/room_url_width2"
                android:gravity="center_vertical"
                android:hint="@string/main_input_height"
                android:inputType="number" />
            <EditText
                android:id="@+id/room_url_bitrate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit2"
                android:layout_toRightOf="@+id/room_url_height2"
                android:gravity="center_vertical"
                android:hint="@string/main_input_bitrate"
                android:inputType="number" />
            <EditText
                android:id="@+id/room_url_fps2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/room_url_edit2"
                android:layout_toRightOf="@+id/room_url_bitrate2"
                android:gravity="center_vertical"
                android:hint="@string/main_input_fps"
                android:inputType="number" />
        </RelativeLayout>


        <Button
            android:id="@+id/button_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:onClick="onClickJoin"
            android:text="@string/main_button" />
    </LinearLayout>
</ScrollView>
